@@ -1,3 +1,8 @@
+TAG: vocload-6-0-8-7
+DATE: 03/16/2016
+STAFF: lec
+loadOBO.py : do not include Synonyms for obsolete terms
+
 TAG: vocload-6-0-8-6
 DATE: 03/13/2016
 STAFF: lec
